Tweaked Authoritarian Ideologies

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -32,23 +32,27 @@
 
  #TGWR
 
+ #Authoritarian
+
  autocracy:0 "Absolute Monarchy"
  autocracy_desc:0 "An absolute monarchy is a form of government in which a single person—usually a king or queen—holds absolute, autocratic power. In absolute monarchies, the succession of power is typically hereditary, with the throne passing among members of a ruling family."
  semi_constitutional_monarchy:0 "Semi-Constitutional Monarchy"
- semi_constitutional_monarchy_desc:0 "A semi-constitutional monarchy is a form of government in which the Monarch has influence over the state almost to the degree of an absolute monarchy, but is limited in some small respect, perhaps by a pro-monarchist constitution."
+ semi_constitutional_monarchy_desc:0 "A semi-constitutional monarchy is a form of authoritarian government where the constitution guarantees basic rights and liberties, as well as some degree of representation for the people, but the Monarch retains the main portion of political power in the state, usually by unilaterally appointing the government responsible to them."
  semi_constitutional_monarchy_reserve:0 "Semi-Constitutional Monarchy"
- semi_constitutional_monarchy_reserve_desc:0 "A semi-constitutional monarchy is a form of government in which the Monarch has influence over the state almost to the degree of an absolute monarchy, but is limited in some small respect, perhaps by a pro-monarchist constitution."
- despotism:0 "Despotism"
- despotism_desc:0 "Despotism is a form of government where a single authority in the form of an organisation or person control the nation with absolute power, often resorting to oppressive and cruel measures when needed."
- oligarchism:0 "Oligarchy"
- oligarchism_desc:0 "Oligarchy is a form of government where a select few with absolute power rule over the people. Oligarchs attach their institutions onto the apparatus of their territory."
- authoritarian_democracy:0 "Authoritarian Democracy"
- authoritarian_democracy_desc:0 "Authoritarian Democracy is a form of government which involves a supremely powerful executive while still maintaining some degree of local democracy, or elections to purely advisory roles. Authoritarian Democrats call for a strong unifying government that isn't entirely at the whim of the franchise, but while still keeping some extent of popular mandate."
+ semi_constitutional_monarchy_reserve_desc:0 "A semi-constitutional monarchy is a form of authoritarian government where the constitution guarantees basic rights and liberties, as well as some degree of representation for the people, but the Monarch retains the main portion of political power in the state, usually by unilaterally appointing the government responsible to them."
+ despotism:0 "Civilian Dictatorship"
+ despotism_desc:0 "A civilian dictatorship is a form of authoritarian government where the absolute political power in the state is concentrated in the hands of a single or few individuals. As opposed to military dictatorships, rulers in civilian dictatorships don't derive their power from the military, but usually use democratic procedures to get in their position, and employ repressive methods to maintain it."
+ authoritarian_democracy:0 "Managed Democracy"
+ authoritarian_democracy_desc:0 "Managed Democracy is a form of authoritarian government where formally democratic procedures exist, but are limited to the extent which allows the current government to hold the office indefinitely. Opposition can exist in such regimes, but its chances of winning against the ruling party through purely legal means are miniscule."
  theocracy_ideology:0 "Theocracy"
  theocracy_ideology_desc:0 "Theocracy is a form of government in which God or a deity of some type is recognized as the supreme ruling authority, giving divine guidance to human intermediaries that manage the day to day affairs of the government."
+ 
+ #Ideologies to remove
  anarcho_primitivism:0 "Anarcho-Primitivism"
  anarcho_primitivism_desc:0 "Anarcho-Primitivism is an anarchist critique of the origins and progress of civilization. An offshoot of Ted Kaczynski's school of thought, anarcho-primitives seek to reverse humanity back in progress and advancement, due to reasons involving mass psychological anguish of modern society along with large ecological and environmental damage."
- 
+ oligarchism:0 "Oligarchy"
+ oligarchism_desc:0 "Oligarchy is a form of government where a select few with absolute power rule over the people. Oligarchs attach their institutions onto the apparatus of their territory."
+
  #Proto-Fascism
 
  stratocracy:0 "Stratocracy"
@@ -74,6 +78,8 @@
  reformist_socialism_desc:0 "Reformist Socialism is a socialist doctrine, which rejects the necessity of social revolution to achieve socialist society. It advocates for gradual changes through existing institutions, which would eventually fundamentally transform the capitalist system."
  anarchism:0 "Anarchism"
  anarchism_desc:0 "Anarchism is an idea and a movement which believe that any form of authority is inherently oppressive. As such, they advocate for abolition of the institutions which maintain unnecessary hierarchy, such as state and capitalist system, and advocate for a classless society."
+ 
+ #Ideologies to remove
  anarchist_communism:0 "Anarchist Communism"
  anarchist_communism_desc:0 "An ideology embracing the idea of communism as a stateless society, anarchist communism eschews the idea of a transitionary socialist state and favors a society based on voluntary associations and mutual aid."
  syndicalism:0 "Syndicalism"
@@ -89,12 +95,14 @@
  
  #Democratic
 
- liberal_conservatism:0 "Liberal Conservativism"
- liberal_conservatism_desc:0 "Liberal conservatism is a political ideology combining conservative policies with liberal stances, especially on economic issues but also on social matters, representing a brand of political conservatism strongly influenced by liberalism. The ideology incorporates the classical-liberal view on economic interventionism, according to which individuals should be free to participate in the market and generate wealth without government interference. However, liberal conservatives also hold that individuals cannot be thoroughly depended on to act responsibly in other spheres of life; therefore, they believe that a strong state is necessary to ensure law and order and that institutions are needed to nurture a sense of duty and responsibility to one's family and one's nation. They also support civil liberties, along with some socially conservative positions."
  classical_liberalism:0 "Classical Liberalism"
  classical_liberalism_desc:0 "Classical liberalism is the ideology of liberties, rights, individualism, reason, and tolerance. It favors a limited mixed government with voting rights."
  social_liberalism:0 "Social Liberalism"
  social_liberalism_desc:0 "Social liberalism is the ideology of collective liberties and rights that favors social welfare and justice. Unlike the classical liberalism, which favors liberty on issues of state, social liberalism mixes in classically conservative planks like taxation, regulations on individuals, groups, and businesses, and more in an effort to ensure social justice and social welfare via government."
+ 
+ #Ideologies to remove
+ liberal_conservatism:0 "Liberal Conservativism"
+ liberal_conservatism_desc:0 "Liberal conservatism is a political ideology combining conservative policies with liberal stances, especially on economic issues but also on social matters, representing a brand of political conservatism strongly influenced by liberalism. The ideology incorporates the classical-liberal view on economic interventionism, according to which individuals should be free to participate in the market and generate wealth without government interference. However, liberal conservatives also hold that individuals cannot be thoroughly depended on to act responsibly in other spheres of life; therefore, they believe that a strong state is necessary to ensure law and order and that institutions are needed to nurture a sense of duty and responsibility to one's family and one's nation. They also support civil liberties, along with some socially conservative positions."
  tridemism:0 "Tridemism"
  tridemism_desc:0 "The three principles of the people as created by Sun Yat-sen includes nationalism, democracy, and welfare. Nationalism intended to create a unified Chinese identity. Democracy should provide people with ample access to the government. And welfare is needed so that the government will look after its people."
  agrarianism:0 "Agrarianism"
