--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -127,7 +127,7 @@
  GER_progressive_peoples_party_long:0 "Fortschrittliche Volkspartei"
  GER_german_democratic_party:0 "DDP"
  GER_german_democratic_party_long:0 "Deutsche Demokratische Partei"
- GER_neutrality_party:0 "House of Hohenzollern"
+ GER_neutrality_party:0 "Haus Hohenzollern"
  GER_social_democratic_party:0 "SPD"
  GER_social_democratic_party_long:0 "Sozialdemokratische Partei Deutschlands"
  GER_independent_social_democratic_party:0 "USPD"
@@ -138,15 +138,15 @@
  GER_freikorps_party:0 "Freikorps"
  GER_hindenburg_government:0 "Hindenburgs Präsidentschaft"
  
- AUH_neutrality_party:0 "House of Habsburg"
- AUH_neutrality_party_long:0 "House of Habsburg-Lorraine"
+ AUH_neutrality_party:0 "Haus Habsburg"
+ AUH_neutrality_party_long:0 "Haus Habsburg-Lothringen"
  AUH_democratic_party:0 "SDAPÖ"
  AUH_democratic_party_long:0 "Sozialdemokratische Arbeiterpartei Österreichs"
  AUH_communism_party:0 "Linksradikale"
  AUH_fascism_party:0 "DAP"
  AUH_fascism_party_long:0 "Deutsche Arbeiterpartei"
  
- RUS_neutrality_party:0 "House of Romanov"
+ RUS_neutrality_party:0 "Dom Romanovykh"
  RUS_neutrality_party_URP:0 "SRN"
  RUS_neutrality_party_URP_long:0 "Sojuz Russkogo Naroda"
  RUS_democratic_party:0 "Oktyabristy"
@@ -331,15 +331,15 @@
  ITA_fascism_fasces_party_long:0 "Fasci Italiani di Combattimento"
  ITA_fascism_fascist_party:0 "PNF"
  ITA_fascism_fascist_party_long:0 "Partito Nazionale Fascista"
- ITA_neutrality_party:0 "House of Savoy"
+ ITA_neutrality_party:0 "Casa Savoia"
  ITA_neutrality_monarchist_party:0 "Movimento Monarchico"
  ITA_neutrality_monarchist_party_long:0 "Movimento Monarchico Italiano"
  
- ITS_neutrality_party:0 "House of Bourbon"
- ITS_neutrality_party_long:0 "House of Bourbon-Two Sicilies"
+ ITS_neutrality_party:0 "Casa di Borbone"
+ ITS_neutrality_party_long:0 "Casa di Borbone-Due Sicilie"
     
- EMI_neutrality_party:0 "House of Bourbon"
- EMI_neutrality_party_long:0 "House of Bourbon-Parma"
+ EMI_neutrality_party:0 "Casa di Borbone"
+ EMI_neutrality_party_long:0 "Casa Borbone-Parma"
  EMI_communism_party:0 "PSI"
  EMI_communism_party_long:0 "Partito Socialista Italiano"
  EMI_fascism_party:0 "ANI"
@@ -351,22 +351,22 @@
  SIC_communism_party_long:0 "Partito Socialista Italiano"  
  SIC_democratic_party:0 "LDR"
  SIC_democratic_party_long:0 "Liberali, Democratici e Radicali"
- SIC_neutrality_party:0 "House of Bourbon"
- SIC_neutrality_party_long:0 "House of Bourbon-Two Sicilies"
+ SIC_neutrality_party:0 "Casa di Borbone"
+ SIC_neutrality_party_long:0 "Casa di Borbone-Due Sicilie"
 
  SRD_fascism_party:0 "ANI"
  SRD_fascism_party_long:0 "Associazione Nazionalista Italiana"
  SRD_communism_party:0 "PSI"
  SRD_communism_party_long:0 "Partito Socialista Italiano"
  SRD_democratic_party:0 "Partidu Sardu"
- SRD_neutrality_party:0 "House of Savoy"
+ SRD_neutrality_party:0 "Casa Savoia"
  
  TUS_fascism_party:0 "ANI"
  TUS_fascism_party_long:0 "Associazione Nazionalista Italiana"
  TUS_communism_party:0 "PSI"
  TUS_communism_party_long:0 "Partito Socialista Italiano"
- TUS_neutrality_party:0 "House of Habsburg"
- TUS_neutrality_party_long:0 "House of Habsburg-Lorraine"
+ TUS_neutrality_party:0 "Casa degli Asburgo"
+ TUS_neutrality_party_long:0 "Casa degli Asburgo-Lorena"
  
  VNC_fascism_party:0 "ANI"
  VNC_fascism_party_long:0 "Associazione Nazionalista Italiana"
@@ -465,8 +465,8 @@
  FRA_independent_party_long:0 "Sans étiquette"
  FRA_fascism_party:0 "Cercle Proudhon"
  FRA_neutrality_party:0 "Action Française"
- FRA_legitimist_party:0 "House of Bourbon"
- FRA_bonepartist_party:0 "House of Bonaparte"
+ FRA_legitimist_party:0 "Maison Bourbon"
+ FRA_bonepartist_party:0 "Maison Bonaparte"
  FRA_FSN:0 "FSN"
  FRA_FSN_long:0 "Front du Salut National"
  FRA_interim_government_party:0 "Gouvernement Intérimaire"
@@ -624,12 +624,12 @@
  SPR_democratic_party:0 "Partido Liberal"
  SPR_communism_party:0 "PSOE"
  SPR_communism_party_long:0 "Partido Socialista Obrero Español"
- SPR_neutrality_party:0 "House of Bourbon"
+ SPR_neutrality_party:0 "Casa de Borbón"
  SPR_fascism_party:0 "Partido Integrista"
  SPR_military_directory:0 "Directorio Militar"
  SPR_civil_directory:0 "Directorio Civil"
 
- POR_neutrality_party:0 "House of Braganza"
+ POR_neutrality_party:0 "Casa de Braganca"
  POR_military_dictatorship_party:0 "Ditadura Militar"
  POR_military_dictatorship_party_long:0 "Governo da Ditadura Militar"
  POR_communism_party:0 "PSP"
@@ -697,7 +697,7 @@
  LIT_popular_peasants_party_long:0 "Lietuvos valstiečių liaudininkų sąjunga"
  LIT_nationalists_party:0 "LTS"
  LIT_nationalists_party_long:0 "Lietuviu Tautininku Sajunga"
- LIT_house_of_urach:0 "House of Urach"
+ LIT_house_of_urach:0 "Uracho namas"
  
  LAT_neutrality_party:0 "Satversmes sapulce"
  LAT_communism_party:0 "Boļševiki"
@@ -735,13 +735,13 @@
  SWE_democratic_general_electoral_league_party_long:0 "Allmänna Valmansförbundet"
  SWE_democratic_national_party:0 "Nationella Partiet"
  SWE_democratic_national_party_long:0 "Första Kammarens Nationella Parti"
- SWE_neutrality_party:0 "House of Bernadotte"
+ SWE_neutrality_party:0 "Bernadottes hus"
  SWE_fascism_party:0 "Ultrakonservativa"
  SWE_fascism_party_long:0 "Ultrakonservativ Borggårdsregering"
  SWE_national_socialist_farmers_party:0 "SNSBAP"
  SWE_national_socialist_farmers_party_long:0 "Svenska Nationalsocialistiska Bonde-och Arbetarpartiet"
  
- FIN_royal_house:0 "House of Hesse"
+ FIN_royal_house:0 "Hessenin talo"
  FIN_regency:0 "State Regency"
  FIN_neutrality_party:0 "Suomen senaatti"
  FIN_democratic_party:0 "KOK"
@@ -756,7 +756,7 @@
  DEN_democratic_party_long:0 "Det Radikale Venstre"
  DEN_communism_party:0 "VSP"
  DEN_communism_party_long:0 "Danmarks Venstresocialistiske Parti"
- DEN_neutrality_party:0 "House of Glücksburg"
+ DEN_neutrality_party:0 "Huset Glücksborg"
  
  CAN_democratic_party:0 "Liberal Party"
  CAN_democratic_party_long:0 "Liberal Party of Canada"
@@ -807,8 +807,8 @@
  MEX_cientificos_party_long:0 "Los Científicos"
  MEX_huerta_party:0 "Huertistas"
  MEX_obregon_party:0 "Obregónistas"
- MEX_neutrality_party_royal:0 "House of Iturbide"
- MEX_neutrality_party_royal_long:0 "House of Iturbide"
+ MEX_neutrality_party_royal:0 "Casa de Iturbide"
+ MEX_neutrality_party_royal_long:0 "Casa de Iturbide"
  
  ARG_neutrality_party:0 "PAN"
  ARG_neutrality_party_long:0 "Partido Autonomista Nacional"
@@ -904,8 +904,8 @@
  HUN_fascism_party:0 "MOVE"
  HUN_fascism_party_long:0 "Magyar Országos Véderő Egylet"
  
- ROM_neutrality_party:0 "House of Hohenzollern"
- ROM_neutrality_party_long:0 "House of Hohenzollern-Sigmaringen"
+ ROM_neutrality_party:0 "Casa Hohenzollern"
+ ROM_neutrality_party_long:0 "Casa Hohenzollern-Sigmaringen"
  ROM_communism_party:0 "PSDR"
  ROM_communism_party_long:0 "Partidul Social Democrat din România"
  ROM_democratic_party:0 "PNL"
@@ -942,8 +942,8 @@
  SER_democrat_party:0 "Demokrate"
  SER_democrat_party_long:0 "Demokratska Stranka"
 
- BUL_neutrality_party:0 "House of Saxe-Coburg"
- BUL_neutrality_party_long:0 "House of Saxe-Coburg and Gotha-Koháry"
+ BUL_neutrality_party:0 "Kŭshtata na Saks-Koburg"
+ BUL_neutrality_party_long:0 "Dom na Sakskoburggot·ski i Gota-Kokhari"
  BUL_communism_party:0 "Tesni Sotsialisti"
  BUL_communism_party_long:0 "Balgarska Rabotnicheska Sotsialdemokraticheska Partia"
  BUL_democratic_party:0 "Demokraticheska Partia"
@@ -980,13 +980,13 @@
  NZL_communism_party:0 "WSP"
  NZL_communism_party_long:0 "Wellington Socialist Party"
  
- NOR_neutrality_party:0 "House of Glücksburg"
+ NOR_neutrality_party:0 "Huset Glücksborg"
  NOR_communism_party:0 "DNA"
  NOR_communism_party_long:0 "Det Norske Arbeiderparti"
  NOR_democratic_party:0 "Høyre"
  NOR_junta_party:0 "Norsk Aktion"
  
- HOL_neutrality_party:0 "House of Orange-Nassau"
+ HOL_neutrality_party:0 "Huis Oranje-Nassau"
  HOL_communism_party:0 "SDAP"
  HOL_communism_party_long:0 "Sociaal-Democratische Arbeiderspartij"
  HOL_socialist_party:0 "SP"
@@ -1005,8 +1005,8 @@
  BEL_democratic_party_long:0 "Katholieke Partij/Parti Catholique"
  BEL_liberal_party:0 "LP/PL"
  BEL_liberal_party_long:0 "Liberale Partij/Parti Libéral"
- BEL_neutrality_party:0 "House of Saxe-Coburg"
- BEL_neutrality_party_long:0 "House of Saxe-Coburg and Gotha"
+ BEL_neutrality_party:0 "Huis van Saksen-Coburg/Maison de Saxe-Cobourg"
+ BEL_neutrality_party_long:0 "Huis van Saksen-Coburg en Gotha/Maison de Saxe-Cobourg et Gotha"
  BEL_fascism_party:0 "Frontpartij"
  BEL_resistance:0 "LPLRSM-ZMLVZM"
  BEL_resistance_long:0 "La Plus Loyale Résistance de Sa Majesté-Zijn Meest Loyale Verzet van Zijne Majesteit"
@@ -1081,7 +1081,7 @@
  CHL_communism_pos_party:0 "POS"
  CHL_communism_pos_party_long:0 "Partido Obrero Socialista"
 
- ETH_neutrality_party:0 "House of Solomon"
+ ETH_neutrality_party:0 "Selomoni Bēti"
  
  ALB_neutrality_party:0 "Qeveria Toptanit"
  ALB_neutrality_party_long:0 "Qeveria e Esat pashë Toptanit"
@@ -1163,8 +1163,8 @@
  
  LUX_democratic_party:0 "Rietspartei"
  LUX_communism_party:0 "Sozialistesch Partei"
- LUX_neutrality_party:0 "House of Nassau"
- LUX_neutrality_party_long:0 "House of Nassau-Weilburg"
+ LUX_neutrality_party:0 "Haus vun Nassau"
+ LUX_neutrality_party_long:0 "Haus vun Nassau-Weilburg"
  LUX_national_party:0 "Prüm-Partei"
  LUX_national_party_long:0 "Onofhängeg Nationalpartei"
  
@@ -1275,7 +1275,7 @@
  
  ICE_democratic_party:0 "Heimastjórnarflokkurinn"
  ICE_communism_party:0 "Alþýðuflokkurinn"
- ICE_neutrality_party:0 "House of Glücksburg"
+ ICE_neutrality_party:0 "Glücksborg hús"
  
  SYR_fascism_party:0 "SSNP"
  SYR_fascism_party_long:0 "Syrian Social Nationalist Party"
@@ -1326,7 +1326,8 @@
  UKR_fascism_party:0 "UVO"
  UKR_fascism_party_long:0 "Ukrayinska Vіyskova Organіzatsіya"
  UKR_directory_party:0 "Dyrektoriya"
- UKR_monarchy_party:0 "House of Habsburg"
+ UKR_monarchy_party:0 "Dim Habsburhiv"
+ UKR_monarchy_party_long:0 "Dim Habsburhiv-Lotarynhiyi"
 
  GEO_democratic_party:0 "SSDP"
  GEO_democratic_party_long:0 "Sakartvelos Sotsial-demokratiuli Partia"
@@ -1563,27 +1564,27 @@
  RHN_communism_party:0 "Arbeiten Räte"
  RHN_neutrality_party:0 "Freikorps"
 
- BAY_neutrality_party:0 "House of Wittelsbach"
+ BAY_neutrality_party:0 "Haus Wittelsbach"
  BAY_democratic_party:0 "SPD(M)"
  BAY_democratic_party_long:0 "Sozialdemokratische Partei Deutschlands - Moderaten"
  BAY_communism_party:0 "SPD(R)"
  BAY_communism_party_long:0 "Sozialdemokratische Partei Deutschlands - Revisionistische"
  BAY_fascism_party:0 "Freikorps"
 
- SAX_neutrality_party:0 "House of Wettin"
+ SAX_neutrality_party:0 "Haus Wettin"
  SAX_democratic_party:0 "DVP"
  SAX_democratic_party_long:0 "Deutsche Volkspartei"
 
- WUR_neutrality_party:0 "House of Württemberg"
+ WUR_neutrality_party:0 "Haus Württemberg"
  WUR_communism_party:0 "Spartakusbund"
  WUR_democratic_party:0 "SPD"
  WUR_democratic_party_long:0 "Sozialdemokratische Partei Deutschlands"
  
- BAD_neutrality_party:0 "House of Zähringen"
+ BAD_neutrality_party:0 "Haus Zähringen"
  BAD_fascism_party:0 "Christliche Volkspartei"
  BAD_fascism_party_long:0 "Christliche Volkspartei in Baden"
  
- MEK_neutrality_party:0 "House of Mecklenburg-Schwerin"
+ MEK_neutrality_party:0 "Haus Mecklenburg-Schwerin"
 
  BRI_fascism_party:0 "Breiz Dishual"
  BRI_neutrality_party:0 "Goursez Vreizh"
@@ -1690,9 +1691,9 @@
  RIF_neutrality_party:0 "Rif Republic Junta"
  RIF_fascism_party:0 "Amazighs"
 
- OLD_neutrality_party:0 "House of Holstein-Gottorp"
+ OLD_neutrality_party:0 "Haus Holstein-Gottorp"
  
- HAN_neutrality_party:0 "House of Hannover"
+ HAN_neutrality_party:0 "Haus Hannover"
  HAN_communism_party:0 "USPD"
  HAN_communism_party_long:0 "Unabhängige Sozialdemokratische Partei Deutschlands"
  HAN_democratic_party:0 "DVP"
@@ -1885,7 +1886,7 @@
  MCO_neutrality_party:0 "House of Grimaldi"
  MCO_democratic_party:0 "Monégasque Committee"
  
- LIE_neutrality_party:0 "House of Liechtenstein"
+ LIE_neutrality_party:0 "Haus Liechtenstein"
  LIE_democratic_party:0 "Unabhängig"
  LIE_CSVP_party:0 "CSVP"
  LIE_CSVP_party_long:0 "Christlich-Soziale Volkspartei"
