Why tf was half of this in German

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -240,8 +240,8 @@
  ENG_democratic_party:0 "Liberal Party"
  ENG_fascism_party:0 "War Office"
  ENG_democratic_party_conservative:0 "Conservative Party"
- ENG_neutrality_party:0 "House of Saxe-Coburg und Gotha"
- ENG_neutrality_party_long:0 "House of Saxe-Coburg und Gotha"
+ ENG_neutrality_party:0 "House of Saxe-Coburg"
+ ENG_neutrality_party_long:0 "House of Saxe-Coburg and Gotha"
  ENG_socialist_party:0 "Socialist Party"
  ENG_socialist_party_long:0 "British Socialist Party"
  ENG_fabian_party:0 "Fabian Society"
