--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8363,7 +8363,7 @@ USA_klan_ban_5:0 "Police Action Against the Klan"
  MEX_escalate_incident_to_border_conflict_USA_california:0 "Escalate border conflict in California"
  MEX_cancel_border_conflict_USA_california:0 "Cancel border conflict in California"
  pancho_villa_captured:0 "Pancho Villa has been captured"
- 
+ USA_secretary_of_agriculture:0 "Secretary of Agriculture"
  decision_influenza_pandemic:0 "Influenza Pandemic"
  decision_influenza_pandemic_desc:0 "Influenza H1N1 virus spreads like wildfire. Due to the terrible unsanitary conditions in the trenches during the Great War, a flu epidemic infected thousands of soldiers. And now the scale of the epidemic is incredibly huge.\nConsidering the events of the last few years, perhaps mankind is simply being punished for what it has done. Now the whole world should focus on fight against influenza, as it can cause the death of millions of people."
  influenza_educational_institutions:0 "Close Educational Institutions"
