--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4285,6 +4285,9 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.104.tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+15.0%§!\n"
  ottoman.104.tt4:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
  ottoman.104.tt5:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+25.0%§!\n"
+ ottoman.105.t:0 "Hafiz Hakkı Paşa Dies of Typhus"
+ ottoman.105.d:0 "The most successful military graduate of his generation and a member of the House of Osman through marriage, His Highness Hafız Hakkı Paşa has passed away due to typhus. As he contracted it as he was commanding his armies on the Eastern Front, fighting against the enemy. Despite of all the measures and attempts, he could not have been recovered."
+ ottoman.105.a:0 "Rest easy, paşam."
 
  ottoman.105.t:0 "Ottoman-Russian Subjugation"
  ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
