--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4744,8 +4744,8 @@
  TUR_the_new_recruitment_law:0 "The New Recruitment Law"
  TUR_the_new_recruitment_law_desc:0 "As we're in the midst of a major war, we must get all the volunteer forces we can get throughout the empire."
  TUR_the_new_recruitment_law_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_noncore_texticon  Non-core Manpower: §G+15.00%§!\n£manpower_texticon  Recruitable Population Factor: §G5%§!\n\n"
- TUR_schelendorfs_plan:0 "Schelendorf's Plan"
- TUR_schelendorfs_plan_desc:0 "As Germans are advancing in the eastern front, one of the best advisors that they sent to us has suggested to launch an all in invasion to Russia into the Caucasus."
+ TUR_schellendorfs_plan:0 "Schellendorf's Plan"
+ TUR_schellendorfs_plan_desc:0 "As Germans are advancing in the eastern front, one of the best advisors that they sent to us has suggested to launch an all in invasion to Russia into the Caucasus."
  effects_when_selected:0 "§YEffects when selected:§!"
  TUR_hafiz_hakkis_plan:0 "Hafız Hakkı's Plan"
  TUR_hafiz_hakkis_plan_desc:0 "German advisors might be suggesting us to push through the Caucasus, but they have no idea how mountainous and hard to push it is. Instead we have to listen Hafız Hakkı and launch a naval invasion into Russia's eastern Black Sea coast."
