RAJ Viceroy Executive Council Decisions UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8364,40 +8364,40 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  NEP_war_with_SKK:0 "Invade [FROM.GetName]"
 
  # RAJ DECISION
-RAJ_agencies_viceroy_executive_council:0 "Princely States - Central Government\nPowerstruggle"
-RAJ_agency_vs_viceroy:0 "Princely States - Central Government\nPowerstruggle"
-RAJ_balance_agencies:0 "Agencies"
-RAJ_balance_bop:0 "Balanced"
-RAJ_agency:0 "Agency"
-heavy_agency:0 "Powerful Princely States Agencies"
-agency_medium:0 "Empowered Princely States Agencies"
-viceroy_executive_council_high:0 "Powerful Central Government"
-viceroy_executive_council_medium:0 "Empowered Central Government"
-RAJ_princely_state_agency:0 "Princely States"
-RAJ_balance_viceroy_executive_council:0 "Central Government"
-RAJ_agencies_viceroy_executive_council:0 "Princely States - Central Government\nPowerstruggle"
 
-RAJ_strengthen_the_central_gov:0 "Strengthen the Central Government"
-RAJ_strengthen_the_central_gov_desc:0 "The Viceroy's government has proven itself more than capable of handling national affairs, therefore we should expand its administrative influence."
-RAJ_expand_military_industry:0 "Expand Military Industry"
-RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
-RAJ_reformation_through_work:0 "Reformation through Work"
-RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
-RAJ_strengthen_the_agencies:0 "Strengthen the Agencies"
-RAJ_strengthen_the_agencies_desc:0 "The agencies that govern the various princely states throughout India have proved their ability to balance the autonomy of the princes with the objectives of the Raj, therefore we should expand their administrative influence."
-RAJ_concession_to_the_agencies:0 "Concession to the Agencies"
-RAJ_concession_to_the_agencies_desc:0 "A handful of agencies' governors have offered to bribe our administration into turning a blind eye while they violate some regulations. It's an offer we simply cannot refuse."
-RAJ_princely_investments:0 "Princely Investments"
-RAJ_princely_investments_desc:0 "The various princes who inhabit the Raj still possess considerable wealth. Encouraging them to invest in their fiefdom in exchange for minor concessions seems like a fair deal."
-RAJ_agency_infrastructure_effort:0 "Agency Infrastructure Effort"
-RAJ_agency_infrastructure_effort_desc:0 "While the territories directly under our administration have benefited from various investments over time, most of the Princely States remain backward areas. While investing in these territories would extend the Agency's influence, it would also improve the viability of these regions."
+ RAJ_princely_state_agency:0 "Princely States"
+
+ RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
+ RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
+ RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
+ RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
+ RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
+ RAJ_expand_military_industry:0 "Expand Military Industry"
+ RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
+ RAJ_reformation_through_work:0 "Reformation through Work"
+ RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
+ RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
+ RAJ_organise_manoeuvres_desc:0 "Organising military manoeuvres along the North-West Frontier will provide our men with much needed experience and motivation."
+ decision_cost_CP_15_PP_15: "£command_power  §Y15§! £pol_power  §Y15§!"
+ decision_cost_CP_15_PP_15_blocked: "£command_power  §R15§! £pol_power  §Y15§!"
+ decision_cost_CP_15_PP_15_tooltip: "It costs £command_power  §Y15§! and £pol_power  §Y15§! to take the decision"
+ RAJ_o_moore_creagh_take_field_command:0 "Garret O'Moore Creagh Assumes Field Command"
+ RAJ_o_moore_creagh_take_field_command_reward:0 "§YGarret O'Moore Creagh§! ([RAJ.GetFlag]) becomes §YField Marshal§!."
+ decision_cost_CP_25_PP_15: "£command_power  §Y25§! £pol_power  §Y15§!"
+ decision_cost_CP_25_PP_15_blocked: "£command_power  §R25§! £pol_power  §Y15§!"
+ decision_cost_CP_25_PP_15_tooltip: "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
+ RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
+ RAJ_expand_civilian_industry_desc:0 "Since the introduction of the British administration in the region, the subcontinent has lacked any form of domestic industry, apart from small arms arsenals. Our new programme against stagflation is designed to improve this situation and create new jobs along the way."
+ RAJ_organise_public_works:0 "Organise Public Works"
+ RAJ_promote_western_education:0 "Promote Western Education"
+ RAJ_propaganda_campaign:0 "Propaganda Campaign"
+ RAJ_supress_nationalist_newspaper:0 "Supress Nationalist Newspaper"
+ RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
+ RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
+ RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
 
 
 
-RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
-RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
-RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
-RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
  organized_pacifism_category:0 "Organised Pacifism"
  organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
  organise_a_peaceful_protest_in_east_bengal:0 "Organise a Peaceful Protest in East Bengal"
