--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2306,6 +2306,28 @@ ww1_chile.51.a:0 "FUCK, HOLY HOLY FUCK"
 ww1_chile.52.t:0 "The 2nd War Of The Pacific"
 ww1_chile.52.d:0 "Peru And Bolivia had Taken Control Of Their Old Teritories in the Chilean Civil War,and,of course, the chilean state has responded, a new war has unleashed in the americas"
 ww1_chile.52.a:0 "will This Become a 4th Scenario For The Great War"
+ww1_chile.53.t:0 "The Foundation Of The National History Museum"
+ww1_chile.53.d:0 "In the first decade of the 20th century and soon to commemorate Chile's centenary, the intellectual Luis Montt Montt, then director of the National Library, proposed to organize a new historical exhibition. Once ready, occupying the former mansion of the Urmeneta family (located on Monjitas Street), it opened its doors with a large number of objects and a great success with the public."
+ww1_chile.53.a:0 "Noice."
+ww1_chile.54.t:0 "The Foundation Of The Concepcion University"
+ww1_chile.54.d:0 "The Concepcion University has Been Founded,Its regulations were presented and approved, so that on [GetDateText] the rector of the Liceo de Concepción (now Liceo Enrique Molina) Enrique Molina Garmendia founded the university, thus becoming its first rector and its great promoter.[citation needed] The university began to operate with 123 students, belonging to the schools of Dentistry, Pharmacy, Industrial Chemistry and English Pedagogy, which would later become the Faculty of Education.17"
+ww1_chile.54.a:0 "Chile,The True Land Of Inventors"
+ww1_chile.55.t:0 "First Flight In Chile"
+ww1_chile.55.d:0 "At the initiative of cousins Miguel Covarrubias Valdés and David Echeverría Valdés, to celebrate Chile's centennial, they had the idea of bringing a Voisin biplane to the country. The aeronautical feat was entrusted to the French brothers César and Félix Copetta Brossio. On [GetDate], after preparations, César Copetta made the first flight of an airplane in Chile, aboard a Voisin biplane. Copetta takes to the skies in the sector of the Chacra Valparaíso, currently Plaza Ramón Cruz located in the district of Ñuñoa.3"
+ww1_chile.55.a:0 "Maybe We Should Open A Military Aviation School, I've Heard General Concha Is Interested"
+ww1_chile.56.t:0 "First Crossing Of The Andes"
+ww1_chile.56.d:0 "[GetDateText], Lieutenant Dagoberto Godoy climbed into his 110 HP Bristol Le Rhone N°4988 and took off from the El Bosque air base, south of Santiago.5 After flying for two hours over the Andes Mountains at an altitude of 6300 meters, he landed at Lagunitas, near Mendoza, Argentina.It was the first flight of an airplane over the Andes Mountains.5"
+ww1_chile.56.a:0 "A Landmark For Aviation!"
+ww1_chile.57.t:0 "The Finding Of Sulfur Reserves In The Aucanquilcha Volcano"
+ww1_chile.57.d:0 "The Year Is [GetYear],the brothers Raúl, Hipólito and Vicencio Carrasco have discovered the sulfur reserves found at high altitude on the northeast face of the mountain, and founded Sociedad Industrial, Azufrera y Minera Carrasco S.A., an industrial, sulfur and mining company."
+ww1_chile.57.a:0 "kewl."
+ww1_chile.58.t:0 "Lieutenant Bello Disappears!"
+ww1_chile.58.d:0 "[GetDateText] - Yesterday, Lieutenant Alejandro Bello Silva disappeared during a training flight from the Lo Espejo Military Aeronautics School. In adverse weather conditions, Bello veered off course and went out of sight. Despite intensive searches, no trace of the pilot or his aircraft has been found. Disappearance of Lieutenant Bello leaves Chilean society dismayed.."
+ww1_chile.58.a:0 "Mas Perdido Que El Teniente Bello"
+
+
+
+
 
 
 
