--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2757,6 +2757,7 @@ ARG_italian_inmigration:0 "Italian Inmigration"
 ARG_italian_inmigration_desc:0 "Italian Inmigrants have begun running from chile to our fucking country, they fear for their lives"
 CHL_idea_strait_blockade:0 "Blockade On Peru"
 CHL_veteran_circles_idea:0 "Veteran Circles"
+CHL_national_history_museum:0 "National History Museum"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
