--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -47,6 +47,16 @@ ww1_germanrework.5.t:0 "Stormy Debate on the 'Royal Civil List'"
  ww1_germanrework.5.a:0 "The SPD are right, the Kaiser has enough!"
  ww1_germanrework.5.b:0 "Damn the traitors, the Kaiser deserves our loyalty"
 
+#1911 Anti-Semitism in the Army
+ww1_germanrework.6.t:0 "The Centre Criticises Anti-Semitism in the Army"
+ ww1_germanrework.6.d:0 ""
+ ww1_germanrework.6.a:0 "A matter of some concern..."
+
+#1911 Change to Electoral Law in Grand Duchy of Hesse
+ww1_germanrework.7.t:0 "Change to Electoral Law in Hesse"
+ ww1_germanrework.7.d:0 ""
+ ww1_germanrework.7.a:0 "Another step to democracy"
+
 #Decisions
 
 #Reichstag
@@ -54,3 +64,5 @@ GER_reichstag_category:0 "Reichstag"
  GER_reichstag_category_desc:0 "The Reichstag is Germany's lower House of Parliament, as it has been from 1871 after being introduced with the imperial consitution. Within the governmental structure of the Reich, it represents the national and democratic element of the empire - alongside the federalism of the Bundesrat and the monarchic element of the governemtn, embodied in the Reich chancellor. Together with the Bundesrat, the Reichstag holds legislative power and shared in decision-making on Imperial law.\n\nLaws must be passed in the Reichstag before being sent through the Bundestrat, each law will be supported by different parties depending on their politcal alignment, the more powerful the party, the more votes the law will obtain. However, we can still lobby support from other parties."
 GER_election1:0 "Upcoming Reichstag Election"
 GER_election2:0 "Upcoming Reichstag Election"
+
+GER_reichstag_next_elections_category:0 "Predicted Election Results"
