Arms Limitations - Need to make sure this work

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -57,6 +57,18 @@ ww1_germanrework.7.t:0 "Change to Electoral Law in Hesse"
  ww1_germanrework.7.d:0 ""
  ww1_germanrework.7.a:0 "Another step to democracy"
 
+#1911 Anglo-German Arm Treaties
+ww1_germanrework.8.t:0 "England Wants to Limit the Production of Arms"
+ ww1_germanrework.8.d:0 ""
+ ww1_germanrework.8.a:0 "Alas, we must decline"
+ ww1_germanrework.8.b:0 "A noble effort, we accept"
+ww1_germanrework.9.t:0 "Germany Declines Arms Treaty"
+ ww1_germanrework.9.d:0 ""
+ ww1_germanrework.9.a:0 "As expected..."
+ww1_germanrework.10.t:0 "Germany Enters Arms Limitation Pact with England"
+ ww1_germanrework.10.d:0 ""
+ ww1_germanrework.10.a:0 "One small step for peace"
+
 #Decisions
 
 #Reichstag
