March Ruhr Strikes

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -69,6 +69,12 @@ ww1_germanrework.10.t:0 "Germany Enters Arms Limitation Pact with England"
  ww1_germanrework.10.d:0 ""
  ww1_germanrework.10.a:0 "One small step for peace"
 
+#1912 Strikes
+ww1_germanrework.11.t:0 "Stikes in the Ruhr"
+ ww1_germanrework.11.d:0 ""
+ ww1_germanrework.11.a:0 "We shan't negotiate with the unions"
+ ww1_germanrework.11.b:0 "For the greater good we should negotiate with the strikers"
+
 #Decisions
 
 #Reichstag
