1912 Ruhr Accident Event

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -75,6 +75,11 @@ ww1_germanrework.11.t:0 "Stikes in the Ruhr"
  ww1_germanrework.11.a:0 "We shan't negotiate with the unions"
  ww1_germanrework.11.b:0 "For the greater good we should negotiate with the strikers"
 
+#1912 Ruhr Accident
+ww1_germanrework.12.t:0 "Mining Accident in the Ruhr"
+ ww1_germanrework.12.d:0 ""
+ ww1_germanrework.12.a:0 "A sad day for the Reich"
+
 #Decisions
 
 #Reichstag
